<resources>
    <!-- Crucial -->
    <string name="app_name">Insect ID</string>
    <string name="AdminUname" translatable="false">f896d5b6a11500644916de8f11a23d0cba7ef3df34f2dca20bab768a8f15817e</string>
    <string name="AdminPass" translatable="false">238b8d211a86fe7614ed39b81c3f739afcbec17095f8c11a14fb341ff09d8b6a</string>
    <string name="DefaultUname" translatable="false">8e4e01e16d95def7711f3d65b4affbc925b850f741b7d7bb5d88324b829809e7</string>
    <string name="DefaultPass" translatable="false">0d9548d7d5e894e2c5eb76e72ff587d1cfdf02e241c535cf2d68a88e629e0401</string>

    <!-- Main and Login activities -->
    <string name="statusEmpty" translatable="false"></string>
    <string name="statusAdmin" translatable="false">Admin</string>
    <string name="statusDefault">Default</string>
    <string name="usernameHint">Username</string>
    <string name="pwHint">Password</string>
    <string name="pwForgot">Forgot Password</string>
    <string name="errorMsg">Wrong username or password!</string>

    <!-- Main shortcuts -->
    <string name="sc">Go to…</string>
    <string name="jump">JUMP</string>
    <string-array name="shortcuts">
        <item>(Hymenoptera) With wings and a cinched waist</item>
        <item>(Coleoptera) With hard/shell like forewings</item>
        <item>(Heteroptera) Forewings with hard corium and soft wing tips</item>
        <item>(Ephemeroptera) With 2-3 long appendages</item>
        <item>(Dermaptera) With pincer abdomen</item>
    </string-array>

    <!-- Buttons -->
    <string name="logIn">Sign In</string>
    <string name="logOut">Sign Out</string>
    <string name="startBtnText">Start</string>
    <string name="cancelBtn">Cancel</string>
    <string name="saveBtn">Save</string>
    <string name="restartBtn">Restart</string>
    <string name="addEntry">Insert an Entry</string>

    <!-- Toolbar and Menu-->
    <string name="home" translatable="false">Home</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="darkMode">Dark Mode</string>
    <string name="lang" translatable="false">EN</string>
    <string name="tutorial">Tutorial</string>

    <!-- Data Activity Dropdowns-->
    <string name="trapMethod">Trapping Method:</string>
    <string name="catchTime">Catch Time:</string>
    <string name="field">Field:</string>
    <string name="trapNum">Trap Number:</string>
    <string name="sDate">Starting Date :</string>
    <string name="sTime">Starting Time :</string>
    <string name="dataTitle">Data Entry</string>
    <string name="date" translatable="false">dd/mm/yy</string>
    <string name="time" translatable="false">HH:MM</string>
    <string name="toastWarning">Please fill out all of the fields!</string>

    <!-- Insect Entry-->
    <string name="bname">Batch Name:</string>
    <string name="tname">Taxon Identifier Name:</string>
    <string name="insectOrder">Insect Order:</string>
    <string name="note">Note:</string>
    <string name="sub">Submit</string>
    <string name="add">Add another one</string>
    <string name="ready">I am ready to submit</string>

    <string-array name="trapMethods">
        <item>LF</item>
        <item>LFC</item>
        <item>C</item>
        <item>E</item>
    </string-array>

    <string-array name="catchTime">
        <item>D</item>
        <item>N</item>
    </string-array>

    <string-array name="field">
        <item>W</item>
        <item>E</item>
    </string-array>

    <string-array name="orders">
        <item>Arachnida</item>
        <item>Brachycera</item>
        <item>Coleoptera</item>
        <item>Collembola</item>
        <item>Dermaptera</item>
        <item>Diptera</item>
        <item>Ephemeroptera</item>
        <item>Hemiptera</item>
        <item>Heminoptera</item>
        <item>Heteroptera</item>
        <item>Hymenoptera</item>
        <item>Lepidoptera</item>
        <item>Megaloptera</item>
        <item>Microlepidoptera</item>
        <item>Nematocera</item>
        <item>Neuroptera</item>
        <item>Odonata</item>
        <item>Orthoptera</item>
        <item>Psocoptera</item>
        <item>Sternorrhyncha</item>
        <item>Thysanoptera</item>
        <item>Trichoptera</item>
    </string-array>

</resources>