<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <com.google.android.material.textfield.TextInputLayout
                style="@style/exposedDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/sc"
                android:orientation="horizontal"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/shortcutDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/jumpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jump"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelBtn"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
        </TableRow>

    </TableLayout>

</LinearLayout>